--- a/Index.html
+++ b/Index.html
@@ -1160,7 +1160,9 @@
 
                     <div class="hero-cta">
                         <a href="#courses" class="btn-glow"><i class="bi bi-shield-lock"></i> ابدأ رحلة الأمن السيبراني</a>
-                        <a href="Mycv.pdf" class="btn-ghost"><i class="bi bi-download"></i> تحميل السيرة الذاتية</a>
+                        <a href="Mycv.pdf" class="btn-ghost" download>
+                            <i class="bi bi-download"></i> تحميل السيرة الذاتية
+                        </a>
                         <a href="mailto:haider2alatare@gmail.com" class="btn-ghost-alt"><i class="bi bi-envelope"></i> تواصل للعمل</a>
                     </div>
 
@@ -2083,3 +2085,4 @@
     </script>
 </body>
 </html>
+
